# AlienArenaRemake

./: CMakeLists.txt  README.md
cmake/: FindODE.cmake  FindOgg.cmake
data1/shaders/: blank.frag  blank.vert  blur.frag  blur.vert  color_exponent.frag  colorscale.frag  common.frag  common.vert  defringe.frag  defringe.vert  dof.frag  droplets.frag  droplets.vert  framebuffer_distortion.frag  framebuffer_distortion.vert  glass.frag  glass.vert  godrays.frag  kawase.frag  kawase.vert  lensflare.vert  mesh.frag  mesh.vert  mesh_extract_lightmap.frag  mesh_extract_lightmap.vert  minimap.vert  rblur.frag  rscript.frag  rscript.vert  shadow.frag  shadow.vert  vegetation.vert  warp.vert  water.frag  water.vert  world.frag  world.vert
source/: CMakeLists.txt
source/client/: ref.h
source/game/: q_shared.c  q_shared.h
source/qcommon/: common.c  mm_hash.cpp  mm_hash.h  qcommon.h
source/ref_gl/: asset_manager.cpp  asset_manager.hpp  glfuncs.h  qgl.h  r_bloom.c  r_decals.c  r_draw.c  r_image.c  r_image.cpp  r_image.h  r_local.h  r_main.c  r_mesh.c  r_model.c  r_model.h  r_particle.c  r_postprocess.c  r_program.c  r_script.cpp  r_shadowmaps.c  r_surf.c  r_ttf.c  r_warp.c
source/unix/: qgl_unix.c
